--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "msf-web-personal",
   "version": "1.0.0",
   "description": "Personal website for Michael Scott Fulton",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fultonms/msf-web-personal#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.4",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "helmet": "^2.2.0",
